// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`System test for Example > Client > Issue #2177: should handle path params correctly 1`] = `
{
  "data": {
    "createdAt": "2022-01-22T00:00:00.000Z",
    "name": "Alan Turing",
  },
  "status": "success",
}
`;

exports[`System test for Example > Client > Should perform the request with a positive response 1`] = `
{
  "data": {
    "features": [
      {
        "features": [
          {
            "features": [],
            "title": "Above 180cm",
          },
        ],
        "title": "Tall",
      },
      {
        "features": [],
        "title": "Young",
      },
      {
        "features": [
          {
            "features": [
              {
                "features": [],
                "title": "About Typescript",
              },
            ],
            "title": "Tells funny jokes",
          },
        ],
        "title": "Cute",
      },
    ],
    "id": 10,
    "name": "John Doe",
  },
  "status": "success",
}
`;

exports[`System test for Example > Negative > GET request should fail on missing input param 1`] = `
{
  "error": {
    "message": "id: Required",
  },
  "status": "error",
}
`;

exports[`System test for Example > Negative > PATCH request should fail on schema validation 1`] = `
{
  "error": {
    "message": "id: should be greater than or equal to 0",
  },
  "status": "error",
}
`;

exports[`System test for Example > Negative > Should fail to upload if the file is too large 1`] = `
{
  "error": {
    "message": "The file is too large",
  },
  "status": "error",
}
`;

exports[`System test for Example > Negative > Should respond with error to the missing static file request 1`] = `
{
  "error": {
    "message": "Can not GET /public/missing.svg",
  },
  "status": "error",
}
`;

exports[`System test for Example > Positive > Should accept raw data 0 1`] = `
{
  "data": {
    "length": 48687,
  },
  "status": "success",
}
`;

exports[`System test for Example > Positive > Should accept raw data 1 1`] = `
{
  "data": {
    "length": 48687,
  },
  "status": "success",
}
`;

exports[`System test for Example > Positive > Should send an image with a correct header 1`] = `"f39beeff92379dc935586d726211c2620be6f879"`;

exports[`System test for Example > Positive > Should serve static files 1`] = `"f39beeff92379dc935586d726211c2620be6f879"`;

exports[`System test for Example > Positive > Should stream an image with a correct header 1`] = `"f39beeff92379dc935586d726211c2620be6f879"`;
